@@ -3,12 +3,14 @@ Fri, 14 Feb 2003 01:46:38 +0900.
 
 It was downloaded from ftp.gnome.org
 
-Upstream Authors: 
- Alex Graveley 	<alex@ximian.com>
- Dick Porter     <dick@ximian.com>
- Miguel De Icaza	<miguel@ximian.com>
+Upstream Authors and Copyright Holders:
+ Alex Graveley
+ Dick Porter
+ Miguel De Icaza
+ Joe Shaw
+ Dan Winship
 
-Copyright:
+License:
 
     This package is free software; you can redistribute it and/or
     modify it under the terms of the GNU Lesser General Public
@@ -22,8 +24,8 @@ Copyright:
 
     You should have received a copy of the GNU Lesser General Public
     License along with this package; if not, write to the Free Software
-    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
+    Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
 
-On Debian GNU/Linux systems, the complete text of the GNU Lesser General
+On Debian systems, the complete text of the GNU Lesser General
 Public License can be found in `/usr/share/common-licenses/LGPL'.
 
